chore: bump app.js version to force cache clear

--- a/index.html
+++ b/index.html
@@ -1992,7 +1992,7 @@
 
     <!-- CORE LOGIC: CACHE BUSTED -->
     <!-- CORE LOGIC: CACHE BUSTED -->
-    <script src="app.js?v=TOAST_FIX_INLINE_2026"></script>
+    <script src="app.js?v=PERSISTENCE_FIX_FINAL_V1"></script>
     <script src="temp_pensum_logic.js?v=TOAST_FIX_2026"></script>
 
     <script>
