fix(pensum): add fallback logic for missing department specialties and bump version

--- a/index.html
+++ b/index.html
@@ -1993,7 +1993,7 @@
     <!-- CORE LOGIC: CACHE BUSTED -->
     <!-- CORE LOGIC: CACHE BUSTED -->
     <script src="app.js?v=PERSISTENCE_FIX_FINAL_V1"></script>
-    <script src="temp_pensum_logic.js?v=TOAST_FIX_2026"></script>
+    <script src="temp_pensum_logic.js?v=PENSUM_FILTER_FIX_V1"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
