fix(persistence): await DB save during student promotion to prevent revert

--- a/index.html
+++ b/index.html
@@ -1992,7 +1992,7 @@
 
     <!-- CORE LOGIC: CACHE BUSTED -->
     <!-- CORE LOGIC: CACHE BUSTED -->
-    <script src="app.js?v=VISIBILITY_FIX_V1"></script>
+    <script src="app.js?v=PROMOTION_FIX_V1"></script>
     <script src="temp_pensum_logic.js?v=PENSUM_FILTER_FIX_V1"></script>
 
     <script>
