--- a/index.html
+++ b/index.html
@@ -2101,6 +2101,8 @@
     <!-- MOBILE BOTTOM NAVIGATION -->
     <!-- MOBILE BOTTOM NAVIGATION REMOVED -->
 
+    <!-- Main Logic -->
+    <script src="app.js?v=SYNC_FIX_V2"></script>
     <script>lucide.createIcons();</script>
 </body>
 
