Fix: Included temp_pensum_logic.js in index.html to restore Pensum UI features

--- a/index.html
+++ b/index.html
@@ -2152,6 +2152,7 @@
 
     <!-- Main Logic -->
     <script src="app.js?v=SYNC_FIX_V2"></script>
+    <script src="temp_pensum_logic.js"></script>
     <script>lucide.createIcons();</script>
 </body>
 
