fix: Remove duplicate pensum logic loading
- Removed temp_pensum_logic.js from HTML
- Pensum code already integrated in app.js (lines 7000+)
- Duplicate loading was causing TypeError: modulesTextCase is not a function
- Updated app.js cache version to V3
- This should fix the empty pensum view issue

--- a/index.html
+++ b/index.html
@@ -2071,10 +2071,8 @@
 
     <!-- CORE LOGIC: CACHE BUSTED -->
     <!-- CORE LOGIC: CACHE BUSTED -->
-    <script src="app.js?v=PROMOTION_FIX_V1"></script>
-    <!-- CRITICAL: Load pensum logic BEFORE event listeners -->
-    <script src="temp_pensum_logic.js?v=PENSUM_FIX_V2"></script>
-
+    <script src="app.js?v=PENSUM_INTEGRATED_V3"></script>
+    <!-- temp_pensum_logic.js removed - code already integrated in app.js -->
     <!-- Pensum Navigation Listener -->
     <script>
         // Wait for DOM to be ready
